# parra-mobile-sdks

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .swiftformat  DEPLOYMENT.md  DEVELOPMENT.md  Gemfile  LICENSE.md  Package.resolved  Package.swift  Parra Feedback.xctestplan  Parra.podspec  ParraCore.podspec  ParraFeedback.podspec  ParraTests.xctestplan  Podfile  README.md  buildServer.json  bun.lockb  bunfig.toml  cli.sh  openAppData.sh  package-lock.json  package.json  parra-mobile-sdks.code-workspace  scripts.sh  tsconfig.json
.circleci/: config.yml
Demo/: AccountView.swift  AgreementView.swift  AppDelegate.swift  AuthView.swift  HomeView.swift  Info.plist  LicenseView.swift  NotificationsView.swift  OpenSourceLicensesView.swift  PARViewController.h  PARViewController.m  ParraCardsInCollectionView.swift  ParraCardsInModal.swift  ParraCardsInTableView.swift  ParraCardsInView.swift  ParraDemoTableViewController.swift  ParraFeedbackForm.swift  ParraFeedbackFormView.swift  ParraFeedbackInCollectionView.swift  ParraFeedbackInTableView.swift  ParraFeedbackInView.swift  PrivacyPolicy.swift  RootView.swift  TabView.swift  (+2 more)
cli/: .gitignore  BUILDING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs  bun.lockb  index.ts  package.json  release_update.sh  types.ts
cli/ci/: README.md  disable-simulator-hardware-keyboard.ts  index.ts  install-brew-dependencies.ts
cli/commands/: release.ts  tests.ts  utils.ts
cli/release/: pod-release.js  types.ts
cli/src/: api.rs  arg_parser.rs  auth.rs  dependencies.rs  logger.rs  main.rs
cli/src/commands/: bootstrap.rs  login.rs  logout.rs  mod.rs
cli/src/constants/: built.rs  mod.rs  sample.rs
cli/src/project_generator/: generator.rs  mod.rs  renderer.rs  sample_generator.rs  templates.rs
cli/src/types/: api.rs  auth.rs  color_scheme.rs  dependency.rs  mod.rs  templates.rs  theme.rs
cli/tests/: build-tests.test.ts  build-tests.ts  index.ts  types.ts  utils.ts
cli/utils/: command.ts  openAppContainer.ts  runFormatter.ts  types.ts
cli/utils/logger/: logger.ts  types.ts
(+3112 files in other folders)
