[package]
name = "parra"
version = "0.1.64"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.5.4", features = ["derive"] }
convert_case = "0.6.0"
dirs = "5.0.1"
git2 = "0.19.0"
inquire = "0.7.4"
liquid = "0.26.4"
open = "5.1.2"
# OpenSSL needs to be included here with vendored option to prevent
# cross-compilation failure in CI.
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
security-framework = "2.10.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
slugify = "0.1.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.5.0"

[build-dependencies]
built = { version = "0.7.4", features = ["git2"] }
